fixing whitespaces in teasers

--- a/ng-app/src/app/shared/article-teaser/article-teaser.component.scss
+++ b/ng-app/src/app/shared/article-teaser/article-teaser.component.scss
@@ -1,6 +1,6 @@
 ion-slides {
   top: -95px;
-  height: 100%;
+  height: calc(100vh + 95px);
 }
 
 .swiper-slide {
