--- a/ng-app/src/app/shared/article-teaser/article/article.component.scss
+++ b/ng-app/src/app/shared/article-teaser/article/article.component.scss
@@ -9,7 +9,7 @@
 
 .wrapper-image {
   width: 100%;
-  height: 50vh;
+  height: 69vh;
 }
 
 .photo-credit {
